[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mdtopdf"
version = "1.0.0rc1"
authors = [
  { name="Ableytner", email="ableytner@gmx.at" },
]
description = "A library to convert markdown files to PDF using Githubs dark dimmed styling."
readme = "README.md"
license = "GPL-3.0"
license-files = [
  "LICENSE",
]
requires-python = ">=3.10"
classifiers = [
  "Development Status :: 4 - Beta",
  "Operating System :: Microsoft :: Windows",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Software Development :: Libraries :: Python Modules"
]
dependencies = [
  "markdown-it-py[plugins]",
  "playwright",
  "requests",
  "abllib"
]

[project.scripts]
mdtopdf = "mdtopdf:main"

[project.optional-dependencies]
dev = [
  "pytest",
  "pylint"
]

[project.urls]
Repository = "https://github.com/Ableytner/markdown-to-pdf"
"Bug Tracker" = "https://github.com/Ableytner/markdown-to-pdf/issues"
